--- a/content/post/tidytuesday/index.Rmd
+++ b/content/post/tidytuesday/index.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(cowplot)
 library(magick)
-img <- here::here("static/img/tidytues", "logo1.png") %>% # upload the Baylor logo
+img <- here::here("static/img/tidytues", "logo.png") %>% # upload the Baylor logo
   image_read()
 tournament <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-10-06/tournament.csv')
 ```
@@ -58,6 +58,7 @@ For this tutorial you will need the following packages:
 install.packages("tidyverse")
 install.packages("cowplot")
 install.packages("magick")
+install.packages("here")
 install.packages("tidytuesdayR") # if necessary
 ```
 
@@ -267,14 +268,10 @@ Feel free to play around with the colours, text size, font, etc.
 
 It still feels like something is missing... the main reason I chose Baylor was the cool logo (a legitimate reason for liking a team, right?). So, finally, we can place the logo on the plot. Admittedly, I was going for a watermark but reached the limit of my abilities (and time I could devote to this...), so if anyone knows how to do this, please let me know.
 
-Save the image:
-
-![](/img/tidytues/logo1.png)
-
-Upload the image (I have the logo stored in a folder called 'img');
+Upload the image;
 
 ```{r img-upload, eval=FALSE}
-img <- here::here("img", "logo1.png") %>% # upload the Baylor logo
+img <- here::here("img", "logo.png") %>% # upload the Baylor logo
   image_read()
 ```
 
